@@ -13,15 +13,16 @@ improvements.
 Besides Guido, the main developers who have been active on IDLEfork version
 0.8.1 and later are Stephen M. Gava, who implemented the Configuration GUI, the
 new configuration system, and the new About menu, and Kurt B. Kaiser, who
-completed the integration of the RPC and remote debugger, and made a number of
-usability enhancements.
+completed the integration of the RPC and remote debugger, implemented the
+threaded subprocess, and made a number of usability enhancements.
 
 Other contributors include Raymond Hettinger, Tony Lownds (Mac integration),
 Neal Norwitz (code check and clean-up), and Chui Tey (RPC integration, debugger
 integration and persistent breakpoints).
 
-Hernan Foffani, Christos Georgiou, Jason Orendorff, Josh Robb, and Bruce
-Sherwood have submitted useful patches.  Thanks, guys!
+Hernan Foffani, Christos Georgiou, Martin v. Loewis, Jason Orendorff,
+Noam Raphael, Josh Robb, and Bruce Sherwood have submitted useful patches.
+Thanks, guys!
 
 There are others who should be included here, especially those who contributed
 to IDLE versions prior to 0.8, principally Mark Hammond, Jeremy Hylton,
